--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  </head>
+    <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
+    <script type='text/javascript'>
+      google.charts.load('current', {'packages':['annotatedtimeline']});
+    </script>
+    </head>
   <body>
     <div id="app">
       <v-app>
         <v-content>
           <v-container>
             <v-row dense>
-              <v-col md="auto">
-                {{ stats }}
+              <v-col>
+                <div id="chart_div" style="width: 100%; height: 600px;"></div>
               </v-col>
             </v-row>
           </v-container>
@@ -31,25 +35,47 @@
         },
         data: () => {
           return {
-            stats: {},
+            db: [],
+            data: {},
+            // sources: [],
+            // stats: [],
           };
         },
-        created: function () {
-          this.$http.get('config/sources.json')
-          .then((reply) => {
-            reply.data.forEach(source => {
-              this.$http.get(`data/${source['user']}/${source['name']}.json`)
-              .then((reply) => {
-                s = {};
-                s[`${source.user}/${source.name}`] = reply.data;
-                this.stats = Object.assign({}, this.stats, s)
-              })
+        mounted: function () {
+          this.$http.get('data/db.json').then((db) => {
+            this.db = db.data;
+            const cols = Object.keys(this.db.slice(-1)[0]).map((col) => {
+              return {
+                label: col,
+                type: (col == 'timestamp' ? 'date' : 'number'),
+              };
             });
+            const rows = this.db.map((rowobj) => {
+              const c = cols.map((col) => {
+                let v = rowobj[col['label']]
+                if (col['label'] == 'timestamp') {
+                  v = new Date(v * 1000);
+                }
+                return {v};
+              });
+              return {c};
+            });
+            this.data = {
+              cols,
+              rows,
+            };
+            google.charts.load('current', {'packages':['annotatedtimeline']});
+            google.charts.setOnLoadCallback(this.drawChart);
           })
         },
         computed: {
         },
         methods: {
+          drawChart: function () {
+            const data = new google.visualization.DataTable(this.data);
+            const chart = new google.visualization.AnnotatedTimeLine(document.getElementById('chart_div'));
+            chart.draw(data, {displayAnnotations: false});
+          }
         },
       });
     </script>
